- Respect :label_method set in form_ui_options on list.

= 3.7.5
- Fix always show search for nested list on multi-level through associations
- Support changing step, min and max options with column options or search_ui options for decimal and integer search_ui
- Support null and not null comparators in date and datetime search_ui
- Support defining options_for_association_conditions, association_klass_scoped and active_scaffold_enum_options helpers prefixed with model name. Useful when clear_helpers is not called in ApplicationController.
- Fix class for columns with form_ui or css_class when refreshing column
- Eval after_config_callback proc in the context of AS config
- Fix registering constrained fields on polymorphic association
- Improve applying constraints for polymorphic associations when constraining with multiple ids, set only the foreign type
- Support prefixing helpers with base class for models using STI besides model name prefix
- Support create when nested on through association when source association is singular, as rails creates the joint model
- Allow to set controller nil for association columns to STI models
- Add session argument to condition_for_column and condition_for_<column>_column, so custom conditions on columns may use the session, make it optional so it's backwards compatible

= 3.7.4
- Support loading both jquery and jquery-ui externally
- Fix subquery in search with STI

= 3.7.3.1
- Fix search, view was broken when reset_form was added

= 3.7.3
- Escape _ and % when using search with LIKE
- Fix ID in nested scaffolds when parent record has string primary key, with invalid chars for HTML ID
- Fix search with recordselect multiple
- Support loading jquery-ui externally, without jquery-ui-rails gem and ask AS to load JS/CSS for addons based on jquery-ui
- Support usage with importmap